--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,8 @@
     <string name="sample_emoji_tiger">A TOK emoji of a tiger face, white background</string>
     <string name="sample_emoji_camera">A TOK emoji of a simple camera on a white background</string>
     <string name="sample_emoji_llama">A TOK emoji of a llama face, white background</string>
+    <string name="restriction_tip">Maximum limit reached, please wait</string>
+    <string name="result_tip">You can free try until satisfactory result is generated. \nClick share button to share the picture for free.</string>
+    <string name="network_error">Network might be error?</string>
+
 </resources>
