--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -11,5 +11,6 @@
     <string name="restriction_tip">调用已达上限，请稍等</string>
     <string name="result_tip">你可以在付费下载前不断重试，直到生成满意的结果\n你可以点击分享按钮将生成的结果免费分享给其他人</string>
     <string name="network_error">网络似乎有点问题？</string>
+    <string name="query_product_failed">获取商品失败，是否已登录google play？</string>
 
 </resources>
