--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -9,8 +9,10 @@
     <string name="sample_emoji_camera">一个白色背景的简单的照相机</string>
     <string name="sample_emoji_llama">一个羊驼脸，白色背景</string>
     <string name="restriction_tip">调用已达上限，请稍等</string>
-    <string name="result_tip">你可以在付费下载前不断重试，直到生成满意的结果\n你可以点击分享按钮将生成的结果免费分享给其他人</string>
+    <string name="result_tip">你可以在下载前不断重试，直到生成满意的结果\n你可以点击分享按钮将生成的结果免费分享给其他人</string>
     <string name="network_error">网络似乎有点问题？</string>
     <string name="query_product_failed">获取商品失败，是否已登录google play？</string>
+    <string name="auth_failed">获取授权失败，请手动设置.</string>
+    <string name="empty_url">下载url为空</string>
 
 </resources>
